<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    android:baselineAligned="false"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".firstpath.FirstTimeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="451dp">

        <TextView
            android:id="@+id/museappf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/alex_brush"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@android:color/black"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/museapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="49dp"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:text="@string/press_start"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/start_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:background="@drawable/start_button"

            android:fontFamily="sans-serif"
            android:text="@string/Start"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.381" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>