<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:saveEnabled="false"
    android:background="#F3F3F3"
    android:soundEffectsEnabled="false"
    android:splitMotionEvents="false"
    android:transitionGroup="false"
    android:weightSum="10"
    tools:context=".PathActivity"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">



            <TextView
                android:id="@+id/textGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/select_your_first_path_type"
                android:textColor="@android:color/black"
                android:textSize="34sp"
                android:gravity="center"
                />




    </RelativeLayout>

    <GridLayout
        android:id="@+id/grid1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:columnOrderPreserved="false"


        android:rowCount="3"
        android:alpha="1">

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            android:transitionName="trans1"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/composers1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya_sc"
                    android:gravity="center_horizontal"
                    android:text="@string/composers"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card2"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"

            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/period"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:fontFamily="@font/alegreya_sc"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card3"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                                        android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/composition_type"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/alegreya_sc"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>


</LinearLayout>