<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    android:orientation="vertical"
    tools:context=".dashboard.MainDashBoard"
>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/dash_navigationview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#F3F3F3"
        android:theme="@style/NavigationTheme"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_manu_dash"/>

    <LinearLayout
        android:id="@+id/content_dash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/design_default_color_background"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/nav_open_button_dash"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="20dp"
                android:src="@drawable/hamburger1" />

            <ImageView
                android:id="@+id/addpathbutton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_margin="20dp"
                android:background="@color/colorPrimary"

                android:padding="5dp"
                android:src="@drawable/plus3" />

        </RelativeLayout>


        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/paths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/abril_fatface"
                        android:text="@string/paths"
                        android:textColor="@android:color/black"
                        android:textSize="30sp" />

<!--                    <RelativeLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="40dp"-->
<!--                        android:layout_below="@id/paths"-->
<!--                        android:layout_marginLeft="40dp"-->
<!--                        android:layout_marginTop="10dp"-->
<!--                        android:layout_marginRight="40dp"-->
<!--                        android:layout_marginBottom="20dp"-->
<!--                        android:background="@android:color/white"-->
<!--                        android:elevation="8dp">-->

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_centerVertical="true"-->
<!--                            android:layout_marginLeft="10dp"-->
<!--                            android:text="Search" />-->
<!--                    </RelativeLayout>-->


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

<!--                    <LinearLayout-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:orientation="vertical">-->

<!--                        <RelativeLayout-->
<!--                            android:layout_width="60dp"-->
<!--                            android:layout_height="60dp"-->
<!--                            android:layout_margin="4dp"-->
<!--                            android:elevation="7dp">-->

<!--                            <ImageView-->
<!--                                android:layout_width="60dp"-->
<!--                                android:layout_height="60dp"-->
<!--                                android:layout_centerInParent="true"-->
<!--                                android:src="@drawable/ludwig2" />-->

<!--                        </RelativeLayout>-->

<!--                        <TextView-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="Placeholder1"-->
<!--                            android:textAlignment="center"></TextView>-->

<!--                    </LinearLayout>-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:orientation="vertical">-->

<!--                        <RelativeLayout-->
<!--                            android:layout_width="60dp"-->
<!--                            android:layout_height="60dp"-->
<!--                            android:layout_margin="4dp"-->
<!--                            android:elevation="7dp">-->

<!--                            <ImageView-->
<!--                                android:layout_width="60dp"-->
<!--                                android:layout_height="60dp"-->
<!--                                android:layout_centerInParent="true"-->
<!--                                android:src="@drawable/ludwig2" />-->

<!--                        </RelativeLayout>-->

<!--                        <TextView-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="Placehodler2"-->
<!--                            android:textAlignment="center"></TextView>-->

<!--                    </LinearLayout>-->


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/abril_fatface"
                            android:text="@string/composer_paths"
                            android:textAllCaps="true"
                            android:textColor="@android:color/black"
                            android:textSize="20sp" />

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_alignParentRight="true"-->
<!--                            android:layout_centerVertical="true"-->
<!--                            android:text="View all" />-->

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/db_recycler_composers"
                        android:layout_width="match_parent"
                        android:layout_height="150dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/abril_fatface"
                            android:text="@string/period_paths"
                            android:textAllCaps="true"
                            android:textColor="@android:color/black"
                            android:textSize="20sp" />

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_alignParentRight="true"-->
<!--                            android:layout_centerVertical="true"-->
<!--                            android:text="View all" />-->

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/db_recycler_periods"
                        android:layout_width="match_parent"
                        android:layout_height="150dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/abril_fatface"
                            android:text="@string/composition_type_paths"
                            android:textAllCaps="true"
                            android:textColor="@android:color/black"
                            android:textSize="20sp" />

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_alignParentRight="true"-->
<!--                            android:layout_centerVertical="true"-->
<!--                            android:text="View all" />-->

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/db_recycler_types"
                        android:layout_width="match_parent"
                        android:layout_height="150dp" />


                </LinearLayout>

            </LinearLayout>


        </ScrollView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Snack Bar"
            android:id="@+id/snackbar"
            android:layout_weight="10"
            android:layout_centerHorizontal="true" />
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>